ensure that loader z-index covers all items

--- a/launcher.css
+++ b/launcher.css
@@ -1,6 +1,6 @@
 ﻿
 #splash {
-    z-index: 100;
+    z-index: 1000;
     position: absolute;
     top: 0;
     left: 0;
